tolk-tester/tests/invalid-syntax/err-3314.tolk
fun main() {
    return; /// asdfasdfsadf
}

/**
@compilation_should_fail
@stderr doc comments '///' are allowed only at the top-level; use '//' comments here
 */
